--- a/template.yaml
+++ b/template.yaml
@@ -31,9 +31,9 @@ Parameters:
     Description: Name of the endpoint configuration
     Default: return-prediction-xgboost-model-endpointconfig
 
-  Endpointname:
-    Type: String
-    Description: Name of the endpoint 
+  # Endpointname:
+  #   Type: String
+  #   Description: Name of the endpoint 
     
 
 
@@ -52,7 +52,8 @@ Resources:
       Runtime: python3.9
       Environment:
         Variables:
-          ENDPOINT_NAME: !Ref Endpointname
+          # ENDPOINT_NAME: !Ref Endpointname
+          ENDPOINT_NAME: xg-boost-endpoint         
       Policies:
         - AmazonS3FullAccess
         - AmazonSageMakerFullAccess
