--- a/template.yaml
+++ b/template.yaml
@@ -31,9 +31,9 @@ Parameters:
     Description: Name of the endpoint configuration
     Default: return-prediction-xgboost-model-endpointconfig
 
-  # Endpointname:
-  #   Type: String
-  #   Description: Name of the endpoint 
+  Endpointname:
+    Type: String
+    Description: Name of the endpoint 
     
 
 
@@ -52,8 +52,7 @@ Resources:
       Runtime: python3.9
       Environment:
         Variables:
-          # ENDPOINT_NAME: !Ref Endpointname
-          ENDPOINT_NAME: xg-boost-endpoint         
+          ENDPOINT_NAME: !Ref Endpointname        
       Policies:
         - AmazonS3FullAccess
         - AmazonSageMakerFullAccess
@@ -91,11 +90,11 @@ Resources:
           InstanceType: !Ref InstanceType
           InitialVariantWeight: 1.0
 
-  # SageMakerEndpoint:
-  #   Type: "AWS::SageMaker::Endpoint"
-  #   Properties: 
-  #     EndpointName: !Ref Endpointname
-  #     EndpointConfigName: !GetAtt SageMakerEndpointConfig.EndpointConfigName
+  SageMakerEndpoint:
+    Type: "AWS::SageMaker::Endpoint"
+    Properties: 
+      EndpointName: !Ref Endpointname
+      EndpointConfigName: !GetAtt SageMakerEndpointConfig.EndpointConfigName
 
 Outputs:
   ReturnPredictionModel:
@@ -108,9 +107,9 @@ Outputs:
     Value: !Ref SageMakerEndpointConfig
     Export:
       Name: 'ReturnPredictionEndpointConfig'  
-  # ReturnPredictionEndpoint:
-  #   Description: export return prediction endpoint
-  #   Value: !Ref SageMakerEndpoint
-  #   Export:
-  #     Name: 'ReturnPredictionEndpoint'  
+  ReturnPredictionEndpoint:
+    Description: export return prediction endpoint
+    Value: !Ref SageMakerEndpoint
+    Export:
+      Name: 'ReturnPredictionEndpoint'  
     
